// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab Component should render disabled when passing disabled prop  1`] = `
<button
  className="h-19 flex items-center rounded-full py-1.5 px-7 focus:outline-none hover:bg-grey-shd6 disabled:opacity-30 bg-grey-bg undefined"
  disabled={true}
>
  <span
    className="text-body-small text-dark-grey capitalize"
  >
    label
  </span>
</button>
`;

exports[`Tab Component should render with label when passing label prop  1`] = `
<button
  className="h-19 flex items-center rounded-full py-1.5 px-7 focus:outline-none hover:bg-grey-shd6  bg-grey-bg undefined"
  disabled={false}
>
  <span
    className="text-body-small text-dark-grey capitalize"
  >
    label
  </span>
</button>
`;

exports[`Tab Component should render with only label when passing type='default' 1`] = `
<button
  className="h-19 flex items-center rounded-full py-1.5 px-7 focus:outline-none hover:bg-grey-shd6  bg-grey-bg undefined"
  disabled={false}
>
  <span
    className="text-body-small text-dark-grey capitalize"
  >
    label
  </span>
</button>
`;

exports[`Tab Component should render with radio button & file icon when passing type='poll' & pollType='survey' 1`] = `
<button
  className="h-19 flex items-center rounded-full py-1.5 px-7 focus:outline-none hover:bg-grey-shd6  bg-grey-bg undefined"
  disabled={false}
>
  <label
    className="flex items-center justify-end relative cursor-pointer rounded-full group mr-4"
  >
    <input
      checked="false"
      className="opacity-0 relative z-10"
      disabled={false}
      name="poll tab"
      type="radio"
    />
    <div
      className="absolute inset-0 m-auto border border-solid rounded-full border-primary bg-primary group-hover:bg-primary-shd8 h-4 w-4"
    >
      <div
        className="bg-white rounded-full w-1/2 h-1/2 absolute z-10 inset-0 m-auto block"
      />
    </div>
    <span
      className="block"
    />
  </label>
  <svg
    className="w-4 h-4 mr-2"
    fill="#5B6366"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19.903 8.586C19.854 8.48 19.793 8.379 19.707 8.293L13.707 2.293C13.621 2.207 13.52 2.146 13.414 2.097C13.384 2.083 13.352 2.075 13.32 2.064C13.236 2.036 13.15 2.018 13.061 2.013C13.04 2.011 13.021 2 13 2H6C4.897 2 4 2.897 4 4V20C4 21.103 4.897 22 6 22H18C19.103 22 20 21.103 20 20V9C20 8.979 19.989 8.96 19.987 8.938C19.982 8.849 19.965 8.763 19.936 8.679C19.926 8.647 19.917 8.616 19.903 8.586ZM16.586 8H14V5.414L16.586 8ZM6 20V4H12V9C12 9.553 12.447 10 13 10H18L18.002 20H6Z"
      fill="#5B6366"
    />
    <path
      d="M8 12H16V14H8V12ZM8 16H16V18H8V16ZM8 8H10V10H8V8Z"
      fill="#5B6366"
    />
  </svg>
  <span
    className="text-body-small text-dark-grey capitalize"
  >
    label
  </span>
</button>
`;

exports[`Tab Component should render with radio button & image icon when passing type='poll' & pollType='image' 1`] = `
<button
  className="h-19 flex items-center rounded-full py-1.5 px-7 focus:outline-none hover:bg-grey-shd6  bg-grey-bg undefined"
  disabled={false}
>
  <label
    className="flex items-center justify-end relative cursor-pointer rounded-full group mr-4"
  >
    <input
      checked="false"
      className="opacity-0 relative z-10"
      disabled={false}
      name="poll tab"
      type="radio"
    />
    <div
      className="absolute inset-0 m-auto border border-solid rounded-full border-primary bg-primary group-hover:bg-primary-shd8 h-4 w-4"
    >
      <div
        className="bg-white rounded-full w-1/2 h-1/2 absolute z-10 inset-0 m-auto block"
      />
    </div>
    <span
      className="block"
    />
  </label>
  <svg
    className="w-4 h-4 mr-2"
    fill="#5B6366"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7.49902 11C8.32745 11 8.99902 10.3284 8.99902 9.5C8.99902 8.67157 8.32745 8 7.49902 8C6.6706 8 5.99902 8.67157 5.99902 9.5C5.99902 10.3284 6.6706 11 7.49902 11Z"
      fill="#5B6366"
    />
    <path
      d="M10.499 14L8.99902 12L5.99902 16H8.99902H11.999H17.999L13.499 10L10.499 14Z"
      fill="#5B6366"
    />
    <path
      d="M19.999 4H3.99902C2.89602 4 1.99902 4.897 1.99902 6V18C1.99902 19.103 2.89602 20 3.99902 20H19.999C21.102 20 21.999 19.103 21.999 18V6C21.999 4.897 21.102 4 19.999 4ZM3.99902 18V6H19.999L20.001 18H3.99902Z"
      fill="#5B6366"
    />
  </svg>
  <span
    className="text-body-small text-dark-grey capitalize"
  >
    label
  </span>
</button>
`;

exports[`Tab Component should render with radio button & text icon when passing type='poll' & pollType='text' 1`] = `
<button
  className="h-19 flex items-center rounded-full py-1.5 px-7 focus:outline-none hover:bg-grey-shd6  bg-grey-bg undefined"
  disabled={false}
>
  <label
    className="flex items-center justify-end relative cursor-pointer rounded-full group mr-4"
  >
    <input
      checked="false"
      className="opacity-0 relative z-10"
      disabled={false}
      name="poll tab"
      type="radio"
    />
    <div
      className="absolute inset-0 m-auto border border-solid rounded-full border-primary bg-primary group-hover:bg-primary-shd8 h-4 w-4"
    >
      <div
        className="bg-white rounded-full w-1/2 h-1/2 absolute z-10 inset-0 m-auto block"
      />
    </div>
    <span
      className="block"
    />
  </label>
  <svg
    className="w-4 h-4 mr-2"
    fill="none"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7 11H14V13H7V11ZM7 7H17.97V9H7V7ZM7 15H20V17H7V15ZM4 4H6V20H4V4Z"
      fill="#5B6366"
    />
  </svg>
  <span
    className="text-body-small text-dark-grey capitalize"
  >
    label
  </span>
</button>
`;

exports[`Tab Component should render with radio button when passing type='poll'  1`] = `
<button
  className="h-19 flex items-center rounded-full py-1.5 px-7 focus:outline-none hover:bg-grey-shd6  bg-grey-bg undefined"
  disabled={false}
>
  <label
    className="flex items-center justify-end relative cursor-pointer rounded-full group mr-4"
  >
    <input
      checked="false"
      className="opacity-0 relative z-10"
      disabled={false}
      name="poll tab"
      type="radio"
    />
    <div
      className="absolute inset-0 m-auto border border-solid rounded-full border-primary bg-primary group-hover:bg-primary-shd8 h-4 w-4"
    >
      <div
        className="bg-white rounded-full w-1/2 h-1/2 absolute z-10 inset-0 m-auto block"
      />
    </div>
    <span
      className="block"
    />
  </label>
  <span
    className="text-body-small text-dark-grey capitalize"
  >
    label
  </span>
</button>
`;
